@@ -13,8 +13,8 @@ version 2.1-beta3  xx-Oct-2012
 		setIsKeyboardEnabled -> setKeyboardEnabled
 		setIsMouseEnabled -> setMouseEnabled
 		setIsTouchEnabled -> setTouchEnabled
-		setIsAcceleroterEnabled -> setAccelerometerEnabled
-		New way to enable "targeted" touches: [self setTouchEnabled:YES priority:n mode:kCCTouchOneByOne];
+		setIsAccelerometerEnabled -> setAccelerometerEnabled
+		New way to enable "targeted" touches: [self setTouchMode:kCCTouchOneByOne];
 . [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
 . [FIX] Particle: Honors the directory of the .plist file when loading the .png file
 . [FIX] Templates: Autoration can be overriden in runtime on iOS 6
@@ -23,6 +23,9 @@ version 2.1-beta3  xx-Oct-2012
 		Add new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
 . [FIX] Texture: Improved assert when updating filter on NPOT textures
 . [FIX] TextureCache: filenames are standarized before adding them into the cache
+. [FIX] Touch Delegate:
+		CCTargetedTouchDelegate -> CCTouchOneByOneDelegate
+		CCStandardTouchDelegate -> CCTouchAllAtOnceDelegate
 . [FIX] Windows: Toggle fullscreen does not reset whether or not to support touches (issue #1420)
 . [FIX] Xcode: Fixed compiler warnigns
 . [3RD] JS Bindings: Updated to v0.3
